testdata/typechecker/error/portfolio_FuncTooFewArgs.java
// Tests that function calls with too few arguments error.

int main() {
    f();
    return 0;
}

int f(int a) {
    return 0;
}
